--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@metaplex/js": "^4.4.1",
+    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-id": "^0.1.1",
+    "@solana/web3.js": "^1.31.0",
+    "@stitches/react": "^1.2.5",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
