--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@solana/web3.js": "^1.31.0",
     "@stitches/react": "^1.2.5",
     "next": "12.0.4",
+    "next-themes": "0.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
